# SpeechRecognition

./: LICENSE  README.md
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/cz/vutbr/fit/xflajs00/voicerecognition/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AcousticModel.cpp  AudioFrame.cpp  AudioFrame.h  AudioSubsampler.cpp  AudioSubsampler.h  CMakeLists.txt  Decoder.cpp  FeatureMatrix.cpp  FeaturesMatrixFloat.cpp  FeaturesMatrixFloat.h  Graph.cpp  LMWord.cpp  LanguageModel.cpp  MelFilterBank.cpp  MelFilterBank.h  NeuralNetwork.cpp  NeuralNetwork.h  Phoneme.cpp  RSMelFilterBank.cpp  RSNeuralNetwork.cpp  RSNeuralNetworkOld.cpp  RawAudioRecorder.cpp  RawAudioRecorder.h  SpeechRecognitionAPI.cpp  Token.cpp  Utils.cpp  Word.cpp  audio.cpp  constants.h  native-lib.cpp  speech_recognition_jni_interface.cpp
app/src/main/cpp/Decoder/: AcousticModel.cpp  Bigram.cpp  Decoder.cpp  GCList.cpp  Graph.cpp  GraphNode.cpp  HMMGraph.cpp  LMWord.cpp  LanguageModel.cpp  Phoneme.cpp  Token.cpp  ViterbiDecoder.cpp  Word.cpp  WordHistoryList.cpp  WordLinkRecord.cpp
app/src/main/cpp/Decoder/include/: AcousticModel.h  Bigram.h  BigramFWD.h  Decoder.h  GCList.h  Graph.h  GraphNode.h  GraphNodeFWD.h  HMMGraph.h  LMWord.h  LMWordFWD.h  LanguageModel.h  Phoneme.h  Token.h  TokenFWD.h  ViterbiDecoder.h  Word.h  WordHistoryList.h  WordLinkRecord.h
app/src/main/cpp/Feature_Extraction/: AudioFrame.cpp  MelFilterBank.cpp  NeuralNetwork.cpp  RSMelFilterBank.cpp  RSNeuralNetwork.cpp
app/src/main/cpp/Feature_Extraction/include/: AudioFrame.h  MelFilterBank.h  NNInitInfo.h  NeuralNetwork.h  RSBase.h  RSMelFilterBank.h  RSNeuralNetwork.h
app/src/main/cpp/Miscelanous/: AudioSubsampler.cpp  FeatureMatrix.cpp  RawAudioRecorder.cpp  Utils.cpp  WavReader.cpp
app/src/main/cpp/Miscelanous/include/: AudioSubsampler.h  FeatureMatrix.h  RawAudioRecorder.h  Utils.h  WavReader.h
app/src/main/cpp/Threads/: DecoderThread.cpp  FileStreamThread.cpp  JavaCallbacks.cpp  MelBankThread.cpp  NNThread.cpp
app/src/main/cpp/Threads/include/: DecoderThread.h  FileStreamThread.h  JavaCallbacks.h  MelBankThread.h  NNThread.h  QueueData.h  SafeQueue.h
app/src/main/cpp/Utility/: AudioSubsampler.cpp  FeatureMatrix.cpp  RawAudioRecorder.cpp  Utils.cpp  WavReader.cpp
app/src/main/cpp/Utility/include/: AudioSubsampler.h  Exceptions.h  FeatureMatrix.h  RawAudioRecorder.h  Utils.h  WavReader.h
app/src/main/cpp/Voice_Activity_Detection/: VoiceActivityDetector.cpp  VoiceActivityDetector.h
app/src/main/cpp/Voice_Activity_Detection/include/: VoiceActivityDetector.h
app/src/main/cpp/firfilter/: filt.h
app/src/main/cpp/include/: AcousticModel.h  AudioFrame.h  AudioSubsampler.h  FeatureMatrix.h  LanguageModel.h  MelFilterBank.h  NNInitInfo.h  NeuralNetwork.h  Phoneme.h  RSBase.h  RSMelFilterBank.h  RSNeuralNetwork.h  RSNeuralNetworkOld.h  RawAudioRecorder.h  SpeechRecognitionAPI.h  Utils.h  Word.h  constants.h
app/src/main/cpp/kissfft/: _kiss_fft_guts.h  kiss_fft.h  kiss_fftr.h
app/src/main/cpp/threads/: DecoderThread.cpp  JavaCallbacks.cpp  MelBankThread.cpp  NNThread.cpp  SafeQueue.cpp
app/src/main/cpp/threads/include/: DecoderThread.h  JavaCallbacks.h  MelBankThread.h  NNThread.h  QueueData.h  SafeQueue.h
app/src/main/java/cz/vutbr/fit/xflajs00/voicerecognition/: MainActivity.java  SpeechRecognitionAPI.java
app/src/main/jni/: Android.mk  Application.mk  RSmelfilterbank.rs  test.rs  voicerecognition_Jni.cpp
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/main/res/values-cs/: strings.xml
app/src/main/res/values-en/: strings.xml
app/src/main/rs/: RSmelfilterbank.rs  RSneuralnetwork.rs
app/src/test/java/cz/vutbr/fit/xflajs00/voicerecognition/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
